@@ -21,8 +21,10 @@ HWND CMainWindow::Create(CWnd* pParent /*= 0*/)
 	CString str = _T("Main Window");
 
 	// Create the main window
+	CRect rc(20, 50, 400, 300);
+	
 	return CreateEx(WS_EX_TOPMOST, NULL, str, WS_OVERLAPPEDWINDOW | WS_VISIBLE,
-		20 , 50, 400, 300, pParent, NULL);
+		rc, pParent, NULL);
 }
 
 void CMainWindow::CreateTestWindows(int nWindows)
@@ -45,7 +47,7 @@ void CMainWindow::OnCreate()
 
 	// Create an Edit window over the client area of the main window
 	m_Edit.CreateEx(0L, _T("Edit"), _T(""), dwStyle, r.left, r.top, r.right - r.left, r.bottom - r.top,
-						this, NULL, NULL);
+						m_hWnd, NULL, NULL);
 
 	// Set a default font
 	m_Font.CreateFont(16, 0, 0, 0, FW_DONTCARE, 0, 0, 0, ANSI_CHARSET, OUT_DEFAULT_PRECIS,
